Fix login button out of bounds

--- a/client/src/layout.css
+++ b/client/src/layout.css
@@ -160,12 +160,13 @@ table {
 		grid-row: 4 / span 6;
 		-ms-grid-row: 4;
 		-ms-grid-row-span: 6;
+		min-height: 335px;
 	}
 
 }
 
 /* Mobile */
-@media only screen and (max-width: 750px) {
+@media only screen and (max-width: 780px) {
 	.ColumnFlexDirectionOnMobile {
 		flex-direction: column;
 	}
